--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,7 +4,7 @@
   link: /enchantments
 - name: Feats
   link: /feats
-- name: Items
-  link: /items
+- name: Magic Items
+  link: /magic_items
 - name: Spells
   link: /spells
